crates/musa-notation/tests/suite/snapshots/suite__mei__canon.snap
---
source: crates/musa-notation/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <meiHead>
    <fileDesc>
      <titleStmt>
        <title>canon</title>
      </titleStmt>
      <pubStmt/>
    </fileDesc>
  </meiHead>
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="3" meter.unit="4" key.sig="1s" key.mode="major">
            <pgHead>
              <rend halign="center" valign="top">
                <rend xml:id="front-title" fontsize="x-large">canon</rend>
              </rend>
            </pgHead>
            <pgHead2>
              <rend halign="center" valign="top" fontsize="small">– <num label="page">#</num> –</rend>
            </pgHead2>
            <staffGrp>
              <staffDef n="1" lines="5">
                <label>strings</label>
                <labelAbbr>str.</labelAbbr>
              </staffDef>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="4" pname="g"/>
                  <note xml:id="event-1" dur="4" oct="4" pname="a"/>
                  <note xml:id="event-2" dur="4" oct="4" pname="b"/>
                </layer>
                <layer xml:id="layer-1-2" n="2">
                  <rest xml:id="event-8" dur="2" dots="1"/>
                </layer>
              </staff>
              <tempo staff="1" tstamp="1" place="above" mm="96" mm.unit="4" midi.bpm="96"/>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-3" dur="4" oct="4" pname="g"/>
                  <note xml:id="event-4" dur="2" oct="5" pname="c"/>
                </layer>
                <layer xml:id="layer-1-2" n="2">
                  <note xml:id="event-9" dur="4" oct="5" pname="d"/>
                  <note xml:id="event-a" dur="4" oct="5" pname="e"/>
                  <note xml:id="event-b" dur="4" oct="5" pname="f" accid="s"/>
                </layer>
              </staff>
            </measure>
            <measure n="3">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-5" dur="2" oct="4" pname="b"/>
                  <note xml:id="event-6" dur="4" oct="4" pname="a" tie="i"/>
                </layer>
                <layer xml:id="layer-1-2" n="2">
                  <note xml:id="event-c" dur="4" oct="5" pname="d"/>
                  <note xml:id="event-d" dur="2" oct="5" pname="g"/>
                </layer>
              </staff>
            </measure>
            <measure n="4">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-6-t2" dur="4" oct="4" pname="a" tie="t"/>
                  <note xml:id="event-7" dur="2" oct="4" pname="g"/>
                </layer>
                <layer xml:id="layer-1-2" n="2">
                  <note xml:id="event-e" dur="2" oct="5" pname="f" accid="s"/>
                  <note xml:id="event-f" dur="4" oct="5" pname="e" tie="i"/>
                </layer>
              </staff>
            </measure>
            <measure n="5" right="end">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <mSpace/>
                </layer>
                <layer xml:id="layer-1-2" n="2">
                  <note xml:id="event-f-t2" dur="4" oct="5" pname="e" tie="t"/>
                  <note xml:id="event-10" dur="2" oct="5" pname="d"/>
                </layer>
              </staff>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
