crates/musa-notation/tests/suite/snapshots/suite__mei__glass_mountain.snap
---
source: crates/musa-notation/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <meiHead>
    <fileDesc>
      <titleStmt>
        <title>Glass Mountain</title>
        <title type="subtitle">for violin and strings</title>
        <composer>musa</composer>
      </titleStmt>
      <pubStmt>
        <availability>
          <useRestrict>© 2026. Licensed CC BY-SA 4.0.</useRestrict>
        </availability>
      </pubStmt>
    </fileDesc>
  </meiHead>
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="0" key.mode="minor">
            <pgHead>
              <rend halign="center" valign="top">
                <rend xml:id="front-title" fontsize="x-large">Glass Mountain</rend>
                <lb/>
                <rend xml:id="front-subtitle" fontsize="small">for violin and strings</rend>
              </rend>
              <rend halign="right" valign="bottom">
                <rend xml:id="front-composer">musa</rend>
              </rend>
            </pgHead>
            <pgHead2>
              <rend halign="center" valign="top" fontsize="small">– <num label="page">#</num> –</rend>
            </pgHead2>
            <pgFoot>
              <rend xml:id="front-copyright" halign="center" fontsize="x-small">© 2026. Licensed CC BY-SA 4.0.</rend>
            </pgFoot>
            <staffGrp>
              <staffDef n="1" lines="5" clef.shape="G" clef.line="2">
                <label>violin</label>
                <labelAbbr>vio.</labelAbbr>
              </staffDef>
              <staffDef n="2" lines="5">
                <label>strings</label>
                <labelAbbr>str.</labelAbbr>
              </staffDef>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="2" oct="5" pname="e"/>
                  <rest xml:id="event-1" dur="4"/>
                  <note xml:id="event-2" dur="4" oct="5" pname="c" tie="i"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-a" dur="1" oct="5" pname="c"/>
                </layer>
                <layer xml:id="layer-2-2" n="2">
                  <note xml:id="event-e" dur="1" oct="2" pname="a"/>
                </layer>
              </staff>
              <pedal staff="2" startid="#event-e" endid="#event-11"/>
              <tempo staff="1" tstamp="1" place="above" mm="72" mm.unit="4" midi.bpm="72"/>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-2-t2" dur="4" oct="5" pname="c" tie="t"/>
                  <note xml:id="event-3" dur="4" oct="4" pname="b"/>
                  <note xml:id="event-4" dur="2" oct="4" pname="a"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-b" dur="1" oct="5" pname="c"/>
                </layer>
                <layer xml:id="layer-2-2" n="2">
                  <note xml:id="event-f" dur="1" oct="2" pname="f"/>
                </layer>
              </staff>
            </measure>
            <measure n="3">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-5" dur="2" oct="4" pname="a"/>
                  <rest xml:id="event-6" dur="4"/>
                  <note xml:id="event-7" dur="4" oct="4" pname="f" tie="i"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-c" dur="1" oct="4" pname="a"/>
                </layer>
                <layer xml:id="layer-2-2" n="2">
                  <note xml:id="event-10" dur="1" oct="2" pname="d"/>
                </layer>
              </staff>
            </measure>
            <measure n="4" right="end">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-7-t2" dur="4" oct="4" pname="f" tie="t"/>
                  <note xml:id="event-8" dur="4" oct="4" pname="e"/>
                  <note xml:id="event-9" dur="2" oct="4" pname="d"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-d" dur="1" oct="4" pname="g" accid="s"/>
                </layer>
                <layer xml:id="layer-2-2" n="2">
                  <note xml:id="event-11" dur="1" oct="2" pname="e"/>
                </layer>
              </staff>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
