crates/musa-notation/tests/suite/snapshots/suite__mei__profile_fixture.snap
---
source: crates/musa-notation/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <meiHead>
    <fileDesc>
      <titleStmt>
        <title>Profile Fixture</title>
      </titleStmt>
      <pubStmt/>
    </fileDesc>
  </meiHead>
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="0" key.mode="major">
            <pgHead>
              <rend halign="center" valign="top">
                <rend xml:id="front-title" fontsize="x-large">Profile Fixture</rend>
              </rend>
            </pgHead>
            <pgHead2>
              <rend halign="center" valign="top" fontsize="small">– <num label="page">#</num> –</rend>
            </pgHead2>
            <staffGrp>
              <staffDef n="1" lines="5" clef.shape="G" clef.line="2">
                <label>flute</label>
                <labelAbbr>flu.</labelAbbr>
              </staffDef>
              <staffDef n="2" lines="5" clef.shape="F" clef.line="4">
                <label>cello</label>
                <labelAbbr>cel.</labelAbbr>
              </staffDef>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="5" pname="c">
                    <artic artic="stacc" place="above"/>
                  </note>
                  <note xml:id="event-1" dur="4" oct="5" pname="d">
                    <artic artic="stacc" place="above"/>
                  </note>
                  <note xml:id="event-2" dur="2" oct="5" pname="e"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-6" dur="4" oct="3" pname="c">
                    <artic artic="stacc" place="above"/>
                  </note>
                  <note xml:id="event-7" dur="4" oct="3" pname="e">
                    <artic artic="ten" place="above"/>
                  </note>
                  <note xml:id="event-8" dur="2" oct="3" pname="g">
                    <artic artic="acc" place="above"/>
                  </note>
                </layer>
              </staff>
              <dynam staff="1" startid="#event-0" place="below">p</dynam>
              <dynam staff="2" startid="#event-6" place="below">mf</dynam>
              <tempo staff="1" tstamp="1" place="above" mm="100" mm.unit="4" midi.bpm="100"/>
            </measure>
            <measure n="2" right="end">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-3" dur="4" oct="5" pname="g">
                    <artic artic="stacc" place="above"/>
                  </note>
                  <note xml:id="event-4" dur="4" oct="5" pname="a"/>
                  <note xml:id="event-5" dur="2" oct="5" pname="b"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-9" dur="2" oct="3" pname="c"/>
                  <note xml:id="event-a" dur="2" oct="2" pname="g"/>
                </layer>
              </staff>
              <dynam staff="1" startid="#event-3" place="below">f</dynam>
              <dynam staff="2" startid="#event-9" place="below">p</dynam>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
